8368180: The builder names the rest of the engine's configuration
Twelve more choices by name: java(false) - the --no-java option, the
bluntest sandbox, next to classFilter for a finer one -
syntaxExtensions, typedArrays, optimisticTypes, lazyCompilation,
classCacheSize, persistentCodeCache, globalPerEngine,
timeZone(TimeZone), locale(Locale), classPath, and
modulePath(path, modules...), which insists on the modules to resolve
since a module path without --add-modules resolves nothing. The
diagnostic switches - --log, the --print-* family, the trace and
profile options - stay with option(...), which has always taken any
spelling the command line knows. Each named option is exercised by a
test through the behaviour it buys, not just its spelling.

Testing typedArrays(false) found --no-typed-arrays half done: the
fourteen properties stayed on the global holding null, so typeof
Uint8Array said object on an engine configured not to have it. They are
deleted now, as --no-java deletes Java's.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MroqvAFoC5CLSBtnh57oaE